--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -105,7 +105,7 @@
                 <label>Tutorial Lecturer</label>
                 <input type="text" id="editTutorialLecturer" name="tutorialLecturer" readonly><br>
 
-                <label>Exam Venue (Editable)</label>
+                <label>Exam Venue</label>
                 <select name="venue" id="editVenue" required>
                     <option value="" disabled selected>Select Exam Venue</option>
                     {% for venue in venue_data %}
@@ -127,7 +127,7 @@
                     <input type="time" id="endTime" name="endTime" required>
                 </div><br>
 
-                <label>Number of Invigilators (Editable)</label>
+                <label>Number of Invigilators</label>
                 <input type="number" id="editInvigilatorNo" name="invigilatorNo" value="" min="1" step="1" required>
             </div>
         </div>
