--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -81,13 +81,13 @@
                     {% endfor %}
                 </select><br>
 
-                <label>Department Name (Editable)</label>
+                <label>Department Name</label>
                 <input type="text" name="departmentName"
                        value="{{ department_select.departmentName if department_select else '' }}" required>
             </div>
 
             <div class="form-right">
-                <label>Dean/Hos Name (Editable)</label>
+                <label>Dean/Hos Name</label>
                 <select id="deanName" name="deanName">
                     <option value="" disabled selected>Select a Dean</option>
                     {% for dean in deans %}
@@ -97,7 +97,7 @@
                     {% endfor %}
                 </select><br>
 
-                <label>Hop Name (Editable)</label>
+                <label>Hop Name</label>
                 <select id="hopName" name="hopName">
                     <option value="" disabled selected>Select a Hop</option>
                     {% for hop in hops %}
