--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -90,7 +90,7 @@
                 </select>
             </div>
             <div class="form-middle">   
-                <label>Level (Editable)</label>
+                <label>Level</label>
                 <select name="venueLevel" id="editVenueLevel" required>
                     <option value="" disabled selected>Level</option>
                     <option value="LEVEL 2">LEVEL 2</option>
@@ -101,7 +101,7 @@
                 </select>
             </div>
             <div class="form-right">
-                <label>Venue Capacity (Editable)</label>
+                <label>Venue Capacity</label>
                 <input type="number" name="venueCapacity" id="editVenueCapacity" min="1" step="1" required>
             </div>
         </div>
