--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -374,6 +374,7 @@ form {
     width: 30%;
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 .input-container, .password-container {
