--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -39,7 +39,7 @@
 {% block manual_section %}
 <!-- Manual Form -->
 <form id="manualForm" action="{{ url_for('admin_manageVenue') }}" method="POST" enctype="multipart/form-data">
-    <div id="manualSection" class="function-frame" style="width:100%">
+    <div id="manualSection" class="function-frame">
         <h4 style="text-align: center;">Manual Data Entry Section</h4>
         <div class="profile-frame">
             <div class="form-left">
@@ -77,7 +77,7 @@
 {% block edit_section %}
 <!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageVenue') }}" method="POST" enctype="multipart/form-data">
-    <div id="editSection" class="function-frame" style="width:100%">
+    <div id="editSection" class="function-frame">
         <h4 style="text-align: center;">Edit Existing Venue</h4>
         <div class="profile-frame">
             <div class="form-left">
