--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -45,7 +45,7 @@
 {% block upload_section %}
 <!-- Upload Form -->
 <form id="uploadForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-    <div id="uploadSection" class="function-frame">
+    <div id="uploadSection" class="function-frame" style="width:80%;">
         <div class="form-left" style="width: 100%">
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="course_list">
@@ -75,7 +75,7 @@
 {% block manual_section %}
 <!-- Manual Form -->
 <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-    <div id="manualSection" class="function-frame" style="width:100%">
+    <div id="manualSection" class="function-frame">
         <h4 style="text-align: center;">Manual Data Entry Section</h4>
         <div class="profile-frame">
             <div class="form-left">
@@ -133,7 +133,7 @@
 {% block edit_section %}
 <!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageCourse') }}" method="POST">
-    <div id="editSection" class="function-frame" style="width:100%">
+    <div id="editSection" class="function-frame">
         <h4 style="text-align:center;">Edit Existing Courses</h4><br>
 
         <!-- Prefilled form (like manual section) -->
