--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -38,7 +38,7 @@
 {% block manual_section %}
 <!-- Manual Form -->
 <form id="manualForm" action="{{ url_for('admin_manageDepartment') }}" method="POST" enctype="multipart/form-data">
-    <div id="manualSection" class="function-frame" style="width:100%">
+    <div id="manualSection" class="function-frame">
         <h4 style="text-align: center;">Manual Data Entry Section</h4>
         <div class="profile-frame">
             <div class="form-left">
@@ -66,7 +66,7 @@
 {% block edit_section %}
 <!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageDepartment') }}" method="POST" enctype="multipart/form-data">
-    <div class="function-frame" style="width:100%">
+    <div id="editSection" class="function-frame">
         <h4 style="text-align: center;">Edit Existing Departments</h4>
         <div class="profile-frame">
             <div class="form-left">
@@ -108,7 +108,6 @@
                 </select>
             </div>
         </div>
-
         <input type="hidden" name="form_type" value="edit">
         <br><br>
 
