--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -35,7 +35,7 @@
 
                 {% for day in days %}
                 <div class="dashboard-frame">
-                    <h3>{{ day.name }} Scheduled Classes</h3>
+                    <h3>{{ day.name }}<br>Scheduled Classes</h3>
                     <p class="dashboard-text" style="color:{{ day.color }}">{{ day.value }}</p>
                 </div>
                 {% endfor %}
