--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -59,6 +59,11 @@
                     <div id="courseSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
+            <div class="button-wrapper">
+                <a href="{{ url_for('download_course_template') }}">
+                    <button type="button">Download ManageCourse.xlsx Template</button>
+                </a>
+            </div>
             <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
             <input type="hidden" name="form_type" value="upload">
             <br>
