--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -64,12 +64,12 @@
             <br>
 
             <div class="button-wrapper">
-                <div><button type="submit">Upload Course</button></div>
-                <div>
-                    <a href="{{ url_for('download_course_template') }}">
-                        <button type="button">Download ManageCourse.xlsx Template</button>
-                    </a>
-                </div>
+                <button type="submit">Upload Course</button>
+            </div>
+            <div class="button-wrapper">
+                <a href="{{ url_for('download_course_template') }}">
+                    <button type="button">Download ManageCourse.xlsx Template</button>
+                </a>
             </div>
         </div>
     </div>
