--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -48,6 +48,8 @@
     <div id="uploadSection" class="function-frame" style="width:80%;">
         <div class="form-left" style="width: 100%">
             <h4 style="text-align: center;">File Upload Section</h4>
+            <br>
+            <a href="{{ url_for('download_course_template') }}">Download ManageCourse.xlsx Template</a>
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
                     <div class="upload-text">
@@ -66,11 +68,7 @@
             <div class="button-wrapper">
                 <button type="submit">Upload Course</button>
             </div>
-            <div class="button-wrapper">
-                <a href="{{ url_for('download_course_template') }}">
-                    <button type="button">Download ManageCourse.xlsx Template</button>
-                </a>
-            </div>
+            </a>
         </div>
     </div>
 </form>
