--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -48,8 +48,7 @@
     <div id="uploadSection" class="function-frame" style="width:80%;">
         <div class="form-left" style="width: 100%">
             <h4 style="text-align: center;">File Upload Section</h4>
-            <br>
-            <a href="{{ url_for('download_course_template') }}">Download ManageCourse.xlsx Template</a>
+            <a href="{{ url_for('download_course_template') }}" style="text-align: center;">Download ManageCourse.xlsx Template</a><br>
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
                     <div class="upload-text">
